--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/sureshkumar.jpeg" alt="" /></a>
+					<h1><strong>Indraneelan Suresh</strong>, Tamil Author</h1>
 				</div>
 			</header>
 
