--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/sureshkumar.jpeg" alt="" /></a>
-					<h1><strong>Indraneelan Suresh</strong>, Tamil Author</h1>
+					<h1><strong>Indraneelan Suresh</strong><br />Tamil Author</h1>
 				</div>
 			</header>
 
