--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Indraneelan Suresh, Tamil Author</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Indraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal.</p>
+						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
+					-->
 					</section>
 
 				<!-- Two -->
+				<!--
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
@@ -75,8 +77,10 @@
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
+				-->
 
 				<!-- Three -->
+				<!--
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -113,6 +117,7 @@
 							</div>
 						</div>
 					</section>
+				-->
 
 				<!-- Four -->
 				<!--
@@ -438,13 +443,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
+						<li><a href="#" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2021 Suresh Kumar</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
