--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<header class="major">
 							<h2>Indraneelan Suresh, Tamil Author</h2>
 						</header>
-						<p>Indraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal.</p>
+						<p>Indraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal. He hosts a weekly webinar as part of the Tamil Studies UK group of the University of London, where he speaks to eminent Tamil personalities globally. His work has received multiple awards from multiple forums including Kalaimagal, Madhyamar and SOAS-London. </p>
 						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
