--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<header class="major">
 							<h2>Indraneelan Suresh, Tamil Author</h2>
 						</header>
-						<p>Indraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal. He hosts a weekly webinar as part of the Tamil Studies UK group of the University of London, where he speaks to eminent Tamil personalities globally. His work has received multiple awards from multiple forums including Kalaimagal, Madhyamar and SOAS-London. </p>
+						<p>Indraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal. He hosts a weekly webinar as part of the Tamil Studies UK group of the University of London, where he speaks to eminent Tamil personalities globally. His work has received major awards and recognition from multiple forums including Kalaimagal, Madhyamar and SOAS-London. </p>
 						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -38,31 +38,31 @@
 					</section>
 
 				<!-- Two -->
-				<!--
+
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="#" class="image fit thumb"><img src="images/book-1.jpg" alt="" /></a>
+								<h3>கல்கி தீபாவளிச் சிறப்பிதழ்</h3>
+								<p>Featured in Kalki Diwali Special</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="#" class="image fit thumb"><img src="images/book-2.jpg" alt="" /></a>
+								<h3>தில்லியிலிருந்து லண்டனுக்கு பஸ்!</h3>
+								<p>The Bus from Delhi to London</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="#" class="image fit thumb"><img src="images/book-3.jpg" alt="" /></a>
+								<h3>வீழ்தலும் அழகு</h3>
+								<p>The Beauty of Fall</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="#" class="image fit thumb"><img src="images/book-4.jpg" alt="" /></a>
+								<h3>அமெரிக்காவில் தீபாவளி!</h3>
+								<p>Diwali in America</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -75,9 +75,9 @@
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
-				-->
+
 
 				<!-- Three -->
 				<!--
