--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/book-1.jpg" alt="" /></a>
-								<h3>கல்கி தீபாவளிச் சிறப்பிதழ்</h3>
-								<p>Featured in Kalki Diwali Special</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="images/book-2.jpg" alt="" /></a>
-								<h3>தில்லியிலிருந்து லண்டனுக்கு பஸ்!</h3>
-								<p>The Bus from Delhi to London</p>
+								<h3>காட்டு வெளியினிலே...</h3>
+								<p>Outside the Forest (Kalki, April 2021)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/book-3.jpg" alt="" /></a>
 								<h3>வீழ்தலும் அழகு</h3>
-								<p>The Beauty of Fall</p>
+								<p>The Beauty of Fall (Kalki, Nov. 2020)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/book-4.jpg" alt="" /></a>
 								<h3>அமெரிக்காவில் தீபாவளி!</h3>
-								<p>Diwali in America</p>
+								<p>Diwali in America (Kalki, Oct. 2020)</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="#" class="image fit thumb"><img src="images/book-2.jpg" alt="" /></a>
+								<h3>தில்லியிலிருந்து லண்டனுக்கு பஸ்!</h3>
+								<p>The Bus from Delhi to London (Kalki, Sept. 2020)</p>
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
