--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="images/book-1.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/book-1.png" alt="" /></a>
 								<h3>காட்டு வெளியினிலே...</h3>
 								<p>Outside the Forest (Kalki, April 2021)</p>
 							</article>
