--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="images/book-1.png" style="height:200px; width:300px" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/book-1.png" style="height:66%; width:100%" alt="" /></a>
 								<h3>காட்டு வெளியினிலே...</h3>
 								<p>Outside the Forest (Kalki, April 2021)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="images/book-3.jpg" style="height:200px; width:300px" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/book-3.jpg" style="height:66%; width:100%" alt="" /></a>
 								<h3>வீழ்தலும் அழகு</h3>
 								<p>The Beauty of Fall (Kalki, Nov. 2020)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="images/book-4.jpg" style="height:200px; width:300px" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/book-4.jpg" style="height:66%; width:100%" alt="" /></a>
 								<h3>அமெரிக்காவில் தீபாவளி!</h3>
 								<p>Diwali in America (Kalki, Oct. 2020)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="images/book-2.jpg" style="height:200px; width:300px" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/book-2.jpg" style="height:66%; width:100%" alt="" /></a>
 								<h3>தில்லியிலிருந்து லண்டனுக்கு பஸ்!</h3>
 								<p>The Bus from Delhi to London (Kalki, Sept. 2020)</p>
 							</article>
