--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/sureshkumar.jpeg" alt="" /></a>
-					<h1><strong>Indraneelan Suresh</strong><br />Tamil Author</h1>
+					<a href="#" class="image avatar" style="width:200%; margin-left:-60px"><img src="images/sureshkumar.jpeg" alt="" /></a>
+					<h1><strong>Indraneelan Suresh</strong>
+						<br />Tamil Author</h1>
 				</div>
 			</header>
 
