--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar" style="width:200px; margin-left:0px"><img src="images/sureshkumar.jpeg" alt="" /></a>
-					<h1><strong>Indraneelan Suresh</strong>
-						<br />Tamil Author</h1>
+					<h1><strong>Indraneelan Suresh</strong></h1>
+						<br />
+					<h1>Tamil Author</h1>
 				</div>
 			</header>
 
