--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 				<!-- Two -->
 				
-				<section id="two">
+				<section id="onehalf">
 						
 						<h2>Books</h2>
 					<div class="row">
