--- a/index.html
+++ b/index.html
@@ -59,6 +59,26 @@
 						<h2>Selected Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/tiger.png" style="height:200px; width:100%" alt="" /></a>
+								<h3>'டைகர் பட்டோடியை' தெரியுமா..?</h3>
+								<p>Do you know Tiger Pataudi? (Kalki, December 2022)</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="#" class="image fit thumb"><img src="images/manjarinov22.png" style="height:200px; width:100%" alt="" /></a>
+								<h3>வளரும் வலைப்பின்னல்</h3>
+								<p>A growing network (Manjari, November 2022)</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://kalaimagal.net/" class="image fit thumb"><img src="images/diwali.png" style="height:200px; width:100%" alt="" /></a>
+								<h3>தரையில் இறங்கும் ராக்கெட்டுகள்</h3>
+								<p>Reusable Rockets (Kalaimagal, October 2022, Deepavali Edition)</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://kalaimagal.net/" class="image fit thumb"><img src="images/diwali.png" style="height:200px; width:100%" alt="" /></a>
+								<h3>தரையில் இறங்கும் ராக்கெட்டுகள்</h3>
+								<p>Reusable Rockets (Kalaimagal, October 2022, Deepavali Edition)</p>
+							</article>							
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/book-1.png" style="height:200px; width:100%" alt="" /></a>
 								<h3>காட்டு வெளியினிலே...</h3>
 								<p>Outside the Forest (Kalki, April 2021)</p>
