--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 								<p>Reusable Rockets (Kalaimagal, October 2022, Deepavali Edition)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://kalaimagal.net/" class="image fit thumb"><img src="images/diwali.png" style="height:200px; width:100%" alt="" /></a>
-								<h3>தரையில் இறங்கும் ராக்கெட்டுகள்</h3>
-								<p>Reusable Rockets (Kalaimagal, October 2022, Deepavali Edition)</p>
+								<a href="https://siragu.com/" class="image fit thumb"><img src="images/wings.png" style="height:200px; width:100%" alt="" /></a>
+								<h3>தலைப்பு (சிறகு ஆண்டு மலர்)</h3>
+								<p>Title (Siragu, October 2022)</p>
 							</article>							
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/book-1.png" style="height:200px; width:100%" alt="" /></a>
