--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<p>Do you know Tiger Pataudi? (Kalki, December 2022)</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="images/manjarinov22.png" style="height:200px; width:100%" alt="" /></a>
+								<a href="index.html" class="image fit thumb"><img src="images/manjarinov22.png" style="height:200px; width:100%" alt="" /></a>
 								<h3>வளரும் வலைப்பின்னல்</h3>
 								<p>A growing network (Manjari, November 2022)</p>
 							</article>
