--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					
 				</section>
 
-					<section id="two">
+					<section id="twohalf">
 						
 						<h2>Selected Work</h2>
 						<div class="row">
