--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta property="og:image" content="images/sureshkumar.jpeg" />
+		<meta name="description" content="Indiraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal. ">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
