--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 	<head>
 		<title>Indiraneelan Suresh, Tamil Author</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:title" content="Indiraneelan Suresh, Tamil Author" />
+		<meta property="og:type" content="website" />
 		<meta property="og:image" content="images/sureshkumar.jpeg" />
+		<meta property="og:url" content="https://indraneelansuresh.com" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Indiraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal. ">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
