--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<header class="major">
 							<h2>Indiraneelan Suresh, Tamil Author</h2>
 						</header>
-						<p>Indiraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal. He hosts a weekly webinar as part of the Tamil Studies UK group of the University of London, where he speaks to eminent Tamil personalities globally. His work has received major awards and recognition from multiple forums including Kalaimagal, Madhyamar and SOAS-London. </p>
+						<p>Suresh Kumar Ranganathan (pen name: Indiraneelan Suresh) is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki, Kalaimagal, Kanaiyazhi, Amudhasurabi, Kungumam, Rani, Manjari and several others. He has participated in and moderated many live and virtual events including for SOAS, London University and the Tamil Studies UK group of the University of London. His work has received major awards and recognition from multiple forums including Kalaimagal, Madhyamar and SOAS-London. </p>
 						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -54,6 +54,13 @@
 								<a href="https://www.amazon.in/gp/product/8195149944/ref=cx_skuctr_share?smid=A2OMQTGNFVZ5BK" class="image fit thumb"><img src="images/avanam.jpg" style="height:200px; width:100%" alt="" /></a>
 								<h3>அரண்மனை வனம்...</h3>
 								<p>Aranmani Vanam - The Palace Forest (2022)</p>
+							</article>
+					</div>
+					<div class="row">
+							<article class="col-8 col-8-xsmall work-item">
+								<a href="https://www.amazon.com/Nilavum-Malarum-Tamil-Indiraneelan-Suresh-ebook/dp/B0CX8WHCTP" class="image fit thumb"><img src="images/nm.jpg" style="height:200px; width:100%" alt="" /></a>
+								<h3>நிலவும் மலரும்...</h3>
+								<p>Nilavum Malarum  - The Moon and The Flower (2022)</p>
 							</article>
 					</div>
 					
