--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar" style="width:200px; margin-left:0px"><img src="images/sureshkumar.jpeg" alt="" /></a>
+					<a href="index.html" class="image avatar" style="width:200px; margin-left:0px"><img src="images/sureshkumar.jpeg" alt="" /></a>
 					<h1><strong>Indiraneelan Suresh</strong></h1>
 						
 					<h1>Tamil Author</h1>
