--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<header class="major">
 							<h2>Indiraneelan Suresh, Tamil Author</h2>
 						</header>
-						<p>Suresh Kumar Ranganathan (pen name: Indiraneelan Suresh) is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki, Kalaimagal, Kanaiyazhi, Amudhasurabi, Kungumam, Rani, Manjari and several others. He has participated in and moderated many live and virtual events including for SOAS, London University and the Tamil Studies UK group of the University of London. His work has received major awards and recognition from multiple forums including Kalaimagal, Madhyamar and SOAS-London. Suresh’s interviews and book reviews have been featured in TV channels such as DD - Tamil, Puthuyugam TV, and Makkal TV. <a href="about.html">[Learn More]</a>a>
+						<p>Suresh Kumar Ranganathan (pen name: Indiraneelan Suresh) is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki, Kalaimagal, Kanaiyazhi, Amudhasurabi, Kungumam, Rani, Manjari and several others. He has participated in and moderated many live and virtual events including for SOAS, London University and the Tamil Studies UK group of the University of London. His work has received major awards and recognition from multiple forums including Kalaimagal, Madhyamar and SOAS-London. Suresh’s interviews and book reviews have been featured in TV channels such as DD - Tamil, Puthuyugam TV, and Makkal TV. <a href="about.html">[Learn More]</a>
 
 </p>
 						<!--
