--- a/works.html
+++ b/works.html
@@ -25,6 +25,10 @@
 					<h1><strong>Indiraneelan Suresh</strong></h1>
 						
 					<h1>Tamil Author</h1>
+    <br />
+    <a href="#" class="index.html" style="min-width: 30px;padding: 0 0.5em;">Home</a>&nbsp;&nbsp;
+    <a href="#" class="about.html" style="min-width: 30px;padding: 0 0.5em;">About</a>&nbsp;&nbsp;
+    <a href="#" class="works.html" style="min-width: 30px;padding: 0 0.5em;">Works</a>
 				</div>
 			</header>
 
