--- a/works.html
+++ b/works.html
@@ -26,9 +26,9 @@
 						
 					<h1>Tamil Author</h1>
     <br />
-    <a href="#" class="index.html" style="min-width: 30px;padding: 0 0.5em;">Home</a>&nbsp;&nbsp;
-    <a href="#" class="about.html" style="min-width: 30px;padding: 0 0.5em;">About</a>&nbsp;&nbsp;
-    <a href="#" class="works.html" style="min-width: 30px;padding: 0 0.5em;">Works</a>
+    <a href="index.html" class="button" style="min-width: 30px;padding: 0 0.5em;">Home</a>&nbsp;&nbsp;
+    <a href="about.html" class="button" style="min-width: 30px;padding: 0 0.5em;">About</a>&nbsp;&nbsp;
+    <a href="works.html" class="button" style="min-width: 30px;padding: 0 0.5em;">Works</a>
 				</div>
 			</header>
 
