--- a/about.html
+++ b/about.html
@@ -149,8 +149,8 @@
 				<section id="two4half">
 						<div></div>
 						<h2>Works</h2>
-						<div class="row">
-				Find the full list here <a href="#" class="">here</a>
+						<div class="row" style="margin: 1em;">
+				Find the full list&nbsp;<a href="#" class="" style="padding:0px">[here]</a>
 				         </div>
 					</section>
 					
