--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 					<h1><strong>Indiraneelan Suresh</strong></h1>
 						
 					<h1>Tamil Author</h1>
+					<br />
+    <a href="index.html" class="button" style="min-width: 30px;background-color:#f1f1f1;padding: 0 0.5em;">Home</a>&nbsp;&nbsp;
+    <a href="about.html" class="button" style="min-width: 30px;background-color:#f1f1f1;padding: 0 0.5em;">About</a>&nbsp;&nbsp;
+    <a href="works.html" class="button" style="min-width: 30px;background-color:#f1f1f1;padding: 0 0.5em;">Works</a>
 				</div>
 			</header>
 
@@ -122,10 +126,10 @@
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul> -->
+						</div> -->
+						<div class="row" style="margin: 0em;">
+				Find the full list of works &nbsp;<a href="#" class="" style="padding:0px">[here]</a>
+				         </div>
 					</section>
 
 
