--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							</article>
 						</div> -->
 						<div class="row" style="margin: 0em;">
-				Find the full list of works &nbsp;<a href="#" class="" style="padding:0px">[here]</a>
+				Find the full list of works &nbsp;<a href="works.html" class="" style="padding:0px">[here]</a>
 				         </div>
 					</section>
 
