--- a/works.html
+++ b/works.html
@@ -58,7 +58,7 @@
 						
 						<h2>Books</h2>
 						<div class="row">
-							<ul>
+							<ul style="margin:0">
 								<li> அரண்மனை வனம், Kalaimagal Publications, 2022 </li>
                 <li> நிலவும் மலரும்,  Kalaimagal Publications, 2024 </li>
 
