--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
 						<div></div>
 						<h2>Works</h2>
 						<div class="row" style="margin: 0em;">
-				Find the full list&nbsp;<a href="works.html" class="" style="padding:0px">[here]</a> <br /> <br />
+				Find the full list&nbsp;<a href="works.html" class="" style="padding:0px;height:1.7em;">[here]</a> <br /> <br />
 				         </div>
 					</section>
 					
