--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta property="og:title" content="Indiraneelan Suresh, Tamil Author" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" itemprop="image" content="images/sureshkumar.jpeg" />
+		<meta content="http://indiraneelansuresh.com/images/sureshkumar.jpeg" property="og:image"/>
 		<meta property="og:url" content="https://indraneelansuresh.com" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="Indiraneelan Suresh is an acclaimed Tamil author and speaker whose work has appeared at major Tamil magazines including Kalki and Kalaimagal. ">
