--- a/works.html
+++ b/works.html
@@ -61,6 +61,7 @@
 							<ul style="margin:0">
 								<li> அரண்மனை வனம், Kalaimagal Publications, 2022 </li>
                 <li> நிலவும் மலரும்,  Kalaimagal Publications, 2024 </li>
+		<li> தேன்மல்லிப் பூ (குறும் புதினம்), Kuvigam,	2024</li>
 
 							</ul>
             </div>
