--- a/works.html
+++ b/works.html
@@ -141,65 +141,65 @@
 <li> லண்டனுக்கு பஸ், கல்கி, செப்டம்பர்  2020 </li>
 <li> அமெரிக்காவில் தீபாவளி, கல்கி தீபாவளி மலர், நவம்பர்  2020 </li>
 <li> வீழ்தலும் அழகே, கல்கி தீபாவளி மலர், நவம்பர்   </li>
-<li> தியாகவல்லி /திருச்சோபுர திருத்தல வரலாறு , அமுதசுரபி, மே  2021 </li>
-<li> வர்மம் ஒரு மருத்துவ கலையா - நேர்காணல், கலைமகள் , ஜூலை  2021 </li>
+<li> தியாகவல்லி /திருச்சோபுர திருத்தல வரலாறு, அமுதசுரபி, மே  2021 </li>
+<li> வர்மம் ஒரு மருத்துவ கலையா - நேர்காணல், கலைமகள், ஜூலை  2021 </li>
 <li> இலண்டன் நூலகங்களில் தமிழ்ப் புத்தகங்கள்' திருமதி.யமுனா தர்மேந்திரன் அவர்களுடன் ஒரு பேட்டி, கலைமகள் , நவம்பர் 2021 </li>
 <li> மனிதனை வெல்லுமா செயற்கை நுண்ணறிவு?, மஞ்சரி, நவம்பர் 2021 </li>
 <li> தொகுதி சங்கிலி, மஞ்சரி, டிசம்பர்  2021 </li>
 <li> இணைய வழியில் இணையும் பொருட்கள் , மஞ்சரி, ஜனவரி  2021 </li>
 <li> எடுத்த காரியம் யாவினும் வெற்றி -T M மனோகர் அவர்களுடன் நேர்க்காணல், கலைமகள் , ஜனவரி  2022 </li>
-<li> உயர் கணவாய்கள் வழியே குளிர் ஏரிகள் நோக்கி ஒரு பயணம் -லடாக் பயணக் கட்டுரை தொடர் 1 to 7, கலைமகள் , ஜனவரி _ஜூலை 2022  </li>
+<li> உயர் கணவாய்கள் வழியே குளிர் ஏரிகள் நோக்கி ஒரு பயணம் - லடாக் பயணக் கட்டுரை தொடர் 1 to 7, கலைமகள் , ஜனவரி - ஜூலை 2022  </li>
 <li> மலைக்கோட்டையும், மார்கழியும், தேன் சிட்டு பொங்கல் மலர் 2022,   </li>
 <li> லித்தியம் அயன் பேட்டரி நேற்று, இன்று, நாளை?, கலைமகள் , பிப்ரவரி  2022 </li>
-<li> பிரஷஸ்தி_மொழிபெயர்ப்பு கட்டுரை , ஜூன்  2022 </li>
+<li> பிரஷஸ்தி - மொழிபெயர்ப்பு கட்டுரை , ஜூன்  2022 </li>
 <li> கிராம வளர்ச்சியும் திரு கார்த்திக்கேயனும் - பேட்டிக் கட்டுரை, கலைமகள் , ஏப்ரல்  2022 </li>
 <li> தரையில் இறங்கும் ராக்கெட்டுக்கள் , கலைமகள் தீபாவளி மலர் 2022 </li>
 <li> தி ஜா நூற்றாண்டு 50 சிறுகதைகள் ஒரு பார்வை' புத்தகத்திற்கான விமர்சனம், பூபாளம், மே  2022 </li>
 <li> மெட்டவர்ஸ், மஞ்சரி, மே  2022 </li>
-<li> பார் புகழும் பிட்ஸ்பர்க் பெருமாள்_அட்டைப்பட கட்டுரை , கலைமகள், செப்டம்பர் 2022 </li>
-<li> திருஆனைக்காவின் வெண்மதி_அட்டைப்பட கட்டுரை , கலைமகள், அக்டோபர்  2022 </li>
+<li> பார் புகழும் பிட்ஸ்பர்க் பெருமாள் - அட்டைப்பட கட்டுரை , கலைமகள், செப்டம்பர் 2022 </li>
+<li> திருஆனைக்காவின் வெண்மதி - அட்டைப்பட கட்டுரை , கலைமகள், அக்டோபர்  2022 </li>
 <li> குவிகம் கடைசி பக்கம் – பாகம் 2 – Dr பாஸ்கரன், விருட்சம் நாளிதழ், அக்டோபர் 2022 </li>
 <li> வளரும் வலைப்பின்னல், மஞ்சரி, நவம்பர் 2022 </li>
 <li> மேகமே.. மேகமே.., மஞ்சரி, ஜனவரி  2023 </li>
 <li> ஸ்ரீ ஸ்ரீ ஸ்ரீ மஹா பெரியவா அவதார ஸ்தலம் , கலைமகள், ஜனவரி  2023 </li>
-<li> கேள்வியின் நாயகன் , மஞ்சரி, மார்ச் 2023 </li>
-<li> ஆன்டன் செகாவ் எழுதிய 'ஒரு அரசாங்க குமாஸ்தாவின் மரணம்' சிறுகதை - ஒரு பார்வை, விருட்சம் நாளிதழ் , மார்ச் 2023 </li>
+<li> கேள்வியின் நாயகன், மஞ்சரி, மார்ச் 2023 </li>
+<li> ஆன்டன் செகாவ் எழுதிய 'ஒரு அரசாங்க குமாஸ்தாவின் மரணம்' சிறுகதை - ஒரு பார்வை, விருட்சம் நாளிதழ், மார்ச் 2023 </li>
 <li> திருமதி. கவிதா சுரேஷ் அவர்களுடைய பேட்டிக் கட்டுரை 'பார்க்கத் தெரிந்தால் பாதை தெரியும்' , கலைமகள், மே  2023 </li>
-<li> திருமதி மைத்ரேயி சாஸ்திரி அரவிந்த், கர்நாடக இசை கலைஞர் பேட்டிக் கட்டுரை_அட்டைப்பட கட்டுரை , கலைமகள், ஜூன்  2023 </li>
+<li> திருமதி மைத்ரேயி சாஸ்திரி அரவிந்த், கர்நாடக இசை கலைஞர் பேட்டிக் கட்டுரை-அட்டைப்பட கட்டுரை, கலைமகள், ஜூன்  2023 </li>
 <li> எண்ணும் எண்ணங்கள் யாவினும் வெற்றி - பத்மபூஷண் . ஸ்ரீ.ராமதுரை அவர்கள் நேர்காணல், கலைமகள், ஜூன்  2023 </li>
-<li> அன்பும்  தெய்வீகமும்_ ஸ்ரீராமகிருஷ்ண விஜயம் , ஜூன்  2023 </li>
+<li> அன்பும்  தெய்வீகமும் - ஸ்ரீராமகிருஷ்ண விஜயம் , ஜூன்  2023 </li>
 <li> கேள்வியின் நாயகன் , மஞ்சரி , மார்ச்  2023 </li>
 <li> சலங்கை, சங்கீதம், சங்கீர்த்தனம்' - சிவஸ்ரீ ஸ்கந்தப் பிரசாத் - பேட்டி - கலைமகள் 1100'ஆவது இதழ், கலைமகள் , ஆகஸ்ட்  2023 </li>
-<li> புதியன விரும்பு _ பட்டுக்கோட்டை பிரபாக்கர் பேட்டி , கலைமகள் , ஆகஸ்ட்  2023 </li>
+<li> புதியன விரும்பு - பட்டுக்கோட்டை பிரபாக்கர் பேட்டி , கலைமகள் , ஆகஸ்ட்  2023 </li>
 <li> ஜனரஞ்சகப் பத்திரிகைகள், இலக்கிய சிற்றேடுகள் இடையே பிணைப்பு / மாலன் நாராயணன் பேட்டி, கலைமகள் , ஆகஸ்ட்  2023 </li>
-<li> தோரணவாயில்_ தலையங்கம் , பூபாளம் , ஜூன்  2023 </li>
-<li> அழகின் மறுபக்கம்' , பூபாளம் , ஆகஸ்ட் 2023 </li>
-<li> காவியத்தில் ஓர் ஓவியம்_அட்டைப்பட கட்டுரை , கலைமகள் , செப்டம்பர்  2023 </li>
+<li> தோரணவாயில் - தலையங்கம், பூபாளம் , ஜூன்  2023 </li>
+<li> அழகின் மறுபக்கம்' , பூபாளம், ஆகஸ்ட் 2023 </li>
+<li> காவியத்தில் ஓர் ஓவியம் - அட்டைப்பட கட்டுரை, கலைமகள், செப்டம்பர்  2023 </li>
 <li> சஹானாவும் சுத்த நிருத்தமும், கலைமகள், அக்டோபர்  2023 </li>
-<li> கடலைத் தாண்டிய கலை_திருமதி. அனு சக்தி பேட்டி கட்டுரை , கலைமகள், நவம்பர்  2023 </li>
+<li> கடலைத் தாண்டிய கலை - திருமதி. அனு சக்தி பேட்டி கட்டுரை, கலைமகள், நவம்பர்  2023 </li>
 <li> Dr.ஜெயந்தி ரவி IAS அவர்களுடன் ஒரு நேர்முகம், கலைமகள், டிசம்பர்  2023 </li>
 <li> இலண்டன் நாடக மேடை, பூபாளம் , டிசம்பர்  2023 </li>
-<li> சுடுபனியும் குளிர் நெருப்பும் - ஐஸ்லாந்து பயணக்கட்டுரை தொடர் , குவிகம் , பிப் 224_ஆகஸ்ட் 2024 2024 </li>
-<li> வாசிப்போம் வளர்வோம் _திரு.மந்திரமூர்த்தி அழகு -பேட்டிக் கட்டுரை, கலைமகள், பிப்ரவரி  2024 </li>
-<li> லையில் ஒரு கதக் நடன முற்றம்_நடன கலைஞர் லட்சுமி கண்ணன் பேட்டிக் கட்டுரை, கலைமகள், மார்ச்  2024 </li>
-<li> நிருத்ய லய தர்பன்_திருமதி.சுதா கிருஷ்ணன்  நடன கலைஞர் பேட்டிக் கட்டுரை , கலைமகள், ஏப்ரல்  2024 </li>
-<li> அமெரிக்காவில் ஒரு மயிலாப்பூர் _திரு.ஜெயராமன் பேட்டி கட்டுரை , கலைமகள், ஏப்ரல்  2024 </li>
-<li> உருவங்களில் கலந்த உணர்வுகள்_ஆர்ட்டிஸ்ட் திரு.கேசவ் பேட்டிக் கட்டுரை, கலைமகள், மே  2024 </li>
-<li> அன்பெனும் தோட்டத்தில் விளைந்த ஒளிக்கதிர் _கலைமாமணி யோகா புகைப்பட கலைஞர் அட்டைப்பட பேட்டிக் கட்டுரை , கலைமகள், ஜூன்  2024 </li>
-<li> நெஞ்சில் உரமும் நேர்மைத் திறனும்_Dr ராகவன் Retd IPS பேட்டிக் கட்டுரை, கலைமகள், ஜூலை  2024 </li>
-<li> விழியின் மொழி _சுதா ராஜகோபாலன் கலிபோர்னியா USA, கலைமகள், ஜூலை  2024 </li>
+<li> சுடுபனியும் குளிர் நெருப்பும் - ஐஸ்லாந்து பயணக்கட்டுரை தொடர் , குவிகம் , பிப் 224 - ஆகஸ்ட் 2024 2024 </li>
+<li> வாசிப்போம் வளர்வோம் - திரு.மந்திரமூர்த்தி அழகு - பேட்டிக் கட்டுரை, கலைமகள், பிப்ரவரி  2024 </li>
+<li> லையில் ஒரு கதக் நடன முற்றம்-நடன கலைஞர் லட்சுமி கண்ணன் பேட்டிக் கட்டுரை, கலைமகள், மார்ச்  2024 </li>
+<li> நிருத்ய லய தர்பன்- திருமதி.சுதா கிருஷ்ணன்  நடன கலைஞர் பேட்டிக் கட்டுரை , கலைமகள், ஏப்ரல்  2024 </li>
+<li> அமெரிக்காவில் ஒரு மயிலாப்பூர் - திரு.ஜெயராமன் பேட்டி கட்டுரை , கலைமகள், ஏப்ரல்  2024 </li>
+<li> உருவங்களில் கலந்த உணர்வுகள் - ஆர்ட்டிஸ்ட் திரு.கேசவ் பேட்டிக் கட்டுரை, கலைமகள், மே  2024 </li>
+<li> அன்பெனும் தோட்டத்தில் விளைந்த ஒளிக்கதிர் - கலைமாமணி யோகா புகைப்பட கலைஞர் அட்டைப்பட பேட்டிக் கட்டுரை , கலைமகள், ஜூன்  2024 </li>
+<li> நெஞ்சில் உரமும் நேர்மைத் திறனும் - Dr ராகவன் Retd IPS பேட்டிக் கட்டுரை, கலைமகள், ஜூலை  2024 </li>
+<li> விழியின் மொழி - சுதா ராஜகோபாலன் கலிபோர்னியா USA, கலைமகள், ஜூலை  2024 </li>
 <li> காற்றுக்கென்ன வேலி - கீர்த்தனா ஸ்ரீராம் அட்டைப்பட பேட்டிக்கட்டுரை, கலைமகள், செப்டம்பர்  2024 </li>
 <li> மாற்றம், கலைமகள், அக்டோபர்  2024 </li>
 <li> எண்ணத்தில் அள்ளிக் கொஞ்சம் தொடர் From அக்டோபர் 2024, குவிகம் , அக்டோபர்  2024 </li>
 <li> அபிநயம் காண்பதும் அதில் மனம் தோய்வதும், கலைமகள், நவம்பர்  2024 </li>
 <li> காவிரி கரையில் தீபாவளி, அமுதசுரபி , நவம்பர்  2024 </li>
-<li> மன நிம்மதி அருளும் மகேசன், குமுதம் பக்தி ஸ்பெஷல் , டிசம்பர்  2024 </li>
-<li> பாடவா உன் பாடலை_திருமதி.Subhasri  தணிகாசலம் பேட்டி , கலைமகள், டிசம்பர்  2024 </li>
+<li> மன நிம்மதி அருளும் மகேசன், குமுதம் பக்தி ஸ்பெஷல், டிசம்பர்  2024 </li>
+<li> பாடவா உன் பாடலை - திருமதி.Subhasri  தணிகாசலம் பேட்டி , கலைமகள், டிசம்பர்  2024 </li>
 <li> சரும நோய் போக்கும் சங்கரன், குமுதம் பக்தி ஸ்பெஷல் , ஜனவரி  2025 </li>
-<li> வேதம் அனுதினம் தரும் ஞானம்_திரு.விகாஸ் ஆர்யா நேர்காணல், கலைமகள், ஜனவரி  2025 </li>
+<li> வேதம் அனுதினம் தரும் ஞானம் - திரு.விகாஸ் ஆர்யா நேர்காணல், கலைமகள், ஜனவரி  2025 </li>
 <li> கல்யாண சமையல் சாதம், கலைமகள், பிப்ரவரி  2025 </li>
-<li> அமெரிக்காவின் வெதர்மேன், மஞ்சரி , பிப்ரவரி  2025 </li>
-<li> உள்ளத்து ஒளிரும் விளக்கே சக்தி! முனிவர். மாணிக்கம் மகாலிங்கம் அவர்களின் நேர்காணல் , கலைமகள், ஏப்ரல்  2025 </li>
+<li> அமெரிக்காவின் வெதர்மேன், மஞ்சரி, பிப்ரவரி  2025 </li>
+<li> உள்ளத்து ஒளிரும் விளக்கே சக்தி! முனிவர். மாணிக்கம் மகாலிங்கம் அவர்களின் நேர்காணல், கலைமகள், ஏப்ரல்  2025 </li>
 </ul>
 
 		
