--- a/index.html
+++ b/index.html
@@ -69,7 +69,15 @@
 								<p>Nilavum Malarum  - The Moon and The Flower (2022)</p>
 							</article>
 					</div>
-					
+					<div class="row">
+							<article class="col-8 col-8-xsmall work-item">
+								<a href="https://a.co/d/cr0FGtq" class="image fit thumb"><img src="images/tp.jpg" style="height:200px; width:100%" alt="" /></a>
+								<h3>தேன்மல்லிப் பூ (குறும் புதினம்)</h3>
+								<p>Jasmine Flower  (Short Book)</p>
+							</article>
+					</div>
+
+					, Kuvigam,	2024
 				</section>
 
 					<section id="twohalf">
