--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</div>
 					<div class="row">
 							<article class="col-8 col-8-xsmall work-item">
-								<a href="https://a.co/d/cr0FGtq" class="image fit thumb"><img src="images/tp.jpg" style="height:200px; width:100%" alt="" /></a>
+								<a href="https://a.co/d/cr0FGtq" class="image fit thumb"><img src="images/tp.png" style="height:200px; width:100%" alt="" /></a>
 								<h3>தேன்மல்லிப் பூ (குறும் புதினம்)</h3>
 								<p>Jasmine Flower  (Short Book)</p>
 							</article>
