--- a/about.html
+++ b/about.html
@@ -57,12 +57,8 @@
 						<h2>Editorial and Speaking Roles</h2>
 					<div class="row">
 					<ul>
-
-<li> Special Editor, silver jubilee issue of the Bhupalam literary magazine. </li>
-
-<li> Host and Moderator, Tamil Studies UK </li>
-
-<li> Contributing Author, SOAS, London University on Thirukural ( ‘Agara Muthala’ ) </li>
+						
+<li> Speaker, SOAS, London University on Thirukural ( ‘Agara Muthala’ ) </li>
 
 <li> Panelist, SOAS - London University on Tamil curriculum design </li>
 
@@ -78,6 +74,8 @@
 
 <li> Moderator, Tamiraparani Q&A session (7 hours long) featuring Kalimagal Editor Kizhampur Shankara Subramanian as part of the 75th year of Indian independence: Azadi ka Amrit Mahotsav  </li>
 
+<li> Special Editor, Silver jubilee issue of the Bhupalam literary magazine. </li>
+						
 </ul>
 
 		
