--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
 						<h2>Selected Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://solvanam.com/author/inthiraneeraln/" class="image fit thumb"><img src="images/solvanam.jpeg" style="height:200px; width:100%" alt="" /></a>
+								<h3>முனி பள்ளம் (சொல்வனம்)</h3>
+								<p>Sage's Pit (Solvanam, September 2023)</p>
+							</article>	
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/tiger.png" style="height:200px; width:100%" alt="" /></a>
 								<h3>'டைகர் பட்டோடியை' தெரியுமா..?</h3>
 								<p>Do you know Tiger Pataudi? (Kalki, December 2022)</p>
@@ -99,11 +104,7 @@
 								<h3>தரையில் இறங்கும் ராக்கெட்டுகள்</h3>
 								<p>Reusable Rockets (Kalaimagal, October 2022, Deepavali Edition)</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://siragu.com/" class="image fit thumb"><img src="images/wings.png" style="height:200px; width:100%" alt="" /></a>
-								<h3>தலைப்பு (சிறகு ஆண்டு மலர்)</h3>
-								<p>Title (Siragu, October 2022)</p>
-							</article>							
+													
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/book-1.png" style="height:200px; width:100%" alt="" /></a>
 								<h3>காட்டு வெளியினிலே...</h3>
