--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 								<a href="index.html" class="image fit thumb"><img src="images/manjarinov22.png" style="height:200px; width:100%" alt="" /></a>
 								<h3>வளரும் வலைப்பின்னல்</h3>
 								<p>A growing network (Manjari, November 2022)</p>
-							</article>
+							</article> <!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://kalaimagal.net/" class="image fit thumb"><img src="images/diwali.png" style="height:200px; width:100%" alt="" /></a>
 								<h3>தரையில் இறங்கும் ராக்கெட்டுகள்</h3>
 								<p>Reusable Rockets (Kalaimagal, October 2022, Deepavali Edition)</p>
-							</article>
+							</article> -->
 													
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/book-1.png" style="height:200px; width:100%" alt="" /></a>
@@ -119,12 +119,12 @@
 								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/book-4.jpg" style="height:200px; width:100%" alt="" /></a>
 								<h3>அமெரிக்காவில் தீபாவளி!</h3>
 								<p>Diwali in America (Kalki, Oct. 2020)</p>
-							</article>
+							</article> <!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/book-2.jpg" style="height:200px; width:100%" alt="" /></a>
 								<h3>தில்லியிலிருந்து லண்டனுக்கு பஸ்!</h3>
 								<p>The Bus from Delhi to London (Kalki, Sept. 2020)</p>
-							</article>
+							</article> -->
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
