--- a/index.html
+++ b/index.html
@@ -85,9 +85,29 @@
 						<h2>Selected Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="index.html" class="image fit thumb"><img src="images/manfeb25" style="height:200px; width:100%" alt="" /></a>
+								<h3>அமெரிக்காவின் வெதர்மேன்</h3>
+								<p>America's Weatherman (Manjari, February 2025)</p>
+							</article>	
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="index.html" class="image fit thumb"><img src="images/kalainov24.jpg" style="height:200px; width:100%" alt="" /></a>
+								<h3>ஆகாய கங்கை</h3>
+								<p>The Sky Ganga (Kalaimagal, November 2024)</p>
+							</article>	
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://amudhasurabi.in/deepavali-malar-2024/" class="image fit thumb"><img src="images/amuoct24.jpg" style="height:200px; width:100%" alt="" /></a>
+								<h3>பஞ்ச ஆரண்ய தலங்கள்</h3>
+								<p>Five Forest Shrines (Amudasurabhi, October 2024)</p>
+							</article>	
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://solvanam.com/author/inthiraneeraln/" class="image fit thumb"><img src="images/solvanam.jpeg" style="height:200px; width:100%" alt="" /></a>
 								<h3>முனி பள்ளம் (சொல்வனம்)</h3>
 								<p>Sage's Pit (Solvanam, September 2023)</p>
+							</article>	
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="index.html" class="image fit thumb"><img src="images/kmaug23.jpg" style="height:200px; width:100%" alt="" /></a>
+								<h3>சலங்கை, சங்கீதம், சங்கீர்த்தனம்</h3>
+								<p>Salangai, Sangeetham, Sankirthanam (Kalaimagal, August 2023)</p>
 							</article>	
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://kalkionline.com/author/intirniilnnn-cureess" class="image fit thumb"><img src="images/tiger.png" style="height:200px; width:100%" alt="" /></a>
