--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<h2>Selected Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="index.html" class="image fit thumb"><img src="images/manfeb25" style="height:200px; width:100%" alt="" /></a>
+								<a href="index.html" class="image fit thumb"><img src="images/manfeb25.jpg" style="height:200px; width:100%" alt="" /></a>
 								<h3>அமெரிக்காவின் வெதர்மேன்</h3>
 								<p>America's Weatherman (Manjari, February 2025)</p>
 							</article>	
