--- a/works.html
+++ b/works.html
@@ -40,7 +40,7 @@
 						<header class="major">
 							<h2>Indiraneelan Suresh, Tamil Author</h2>
 						</header>
-						<p>Suresh Kumar Ranganathan (Pen Name: Indiraneelan Suresh) writes stories and books on various topics including travel, spirituality, Science, Technology, and many other genres. His stories have been published in leading magazines such as Kalaimagal, Kalki, Kanaiyazhi, Amudhasurabi, Kungumam, Rani, Dinamanikathir, Mangaiyar Malar, Ladies Special, Kumudham Bhakti Special, Sri Ramakrishna Vijayam, Manjari, and several others. Please find a detailed list below. </p>
+						<p>Suresh Kumar Renganathan (Pen Name: Indiraneelan Suresh) writes stories and books on various topics including travel, spirituality, Science, Technology, and many other genres. His stories have been published in leading magazines such as Kalaimagal, Kalki, Kanaiyazhi, Amudhasurabi, Kungumam, Rani, Dinamanikathir, Mangaiyar Malar, Ladies Special, Kumudham Bhakti Special, Sri Ramakrishna Vijayam, Manjari, and several others. Please find a detailed list below. </p>
 
             <!--
 						<ul class="actions">
