--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 						<header class="major">
 							<h2>Indiraneelan Suresh, Tamil Author</h2>
 						</header>
-						<p>Suresh Kumar Ranganathan (Pen Name: Indiraneelan Suresh) writes stories, essays, interviews, travel, spirituality, Science, Technology, Translation and many other genres. His stories were published in leading magazines such as Kalaimagal, Kalki, Kanaiyazhi, Amudhasurabi, Kungumam, Rani, Dinamanikathir, Mangaiyar Malar, Ladies Special, Kumudham Bhakti Special, Sri Ramakrishna Vijayam, Manjari, and several others. Suresh is also an avid photographer and his photographs have appeared in various magazines. Suresh’s interviews and book reviews have been featured in TV channels such as DD - Tamil, Puthuyugam TV, and Makkal TV.</p>
+						<p>Suresh Kumar Renganathan (Pen Name: Indiraneelan Suresh) writes stories, essays, interviews, travel, spirituality, Science, Technology, Translation and many other genres. His stories were published in leading magazines such as Kalaimagal, Kalki, Kanaiyazhi, Amudhasurabi, Kungumam, Rani, Dinamanikathir, Mangaiyar Malar, Ladies Special, Kumudham Bhakti Special, Sri Ramakrishna Vijayam, Manjari, and several others. Suresh is also an avid photographer and his photographs have appeared in various magazines. Suresh’s interviews and book reviews have been featured in TV channels such as DD - Tamil, Puthuyugam TV, and Makkal TV.</p>
             
             <p>Suresh is a graduate of Electrical and Electronics from the University of Madras, Chartered Engineer. He has worked for many years in reputed multinational companies in senior positions in India, the Gulf and the United Kingdom (UK). He has travelled to over 30 countries around the world for work and tourism.</p>
 						<!--
